--- a/XAFRealTimeTracking/XAFRealTimeTracking/MainPage.xaml
+++ b/XAFRealTimeTracking/XAFRealTimeTracking/MainPage.xaml
@@ -6,10 +6,10 @@
 
     <StackLayout>
         <Frame BackgroundColor="#2196F3" Padding="24" CornerRadius="0">
-            <Label Text="Welcome to Xamarin.Forms!" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
+            <Label Text="Maps Sample!" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
         </Frame>
 
-        <maps:Map />
+        <maps:Map IsShowingUser="True"/>
     </StackLayout>
 
 </ContentPage>
