--- a/XAFRealTimeTracking/XAFRealTimeTracking/MainPage.xaml
+++ b/XAFRealTimeTracking/XAFRealTimeTracking/MainPage.xaml
@@ -6,7 +6,7 @@
 
     <StackLayout>
         <Frame BackgroundColor="#2196F3" Padding="24" CornerRadius="0">
-            <Label Text="Maps Sample!" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
+            <Label Text="Maps Live Tracking App!" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
         </Frame>
 
         <maps:Map IsShowingUser="True"/>
